<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    >

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label" />

    <EditText
        android:id="@+id/assignment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/assignment_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        style="?android:listSeparatorTextViewStyle"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/due_date"/>
    
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/completed"
        android:text="@string/completed_label"/>

</LinearLayout>

